bug 200732 : crash on utf8 locales on HP-UX (r=shafalus, sr=blizzard)